--- a/common/pom.xml
+++ b/common/pom.xml
@@ -21,9 +21,10 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
+			<optional>true</optional>
 		</dependency>
 
-		<!-- fastjson -->
+		<!-- fast json -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
@@ -33,6 +34,7 @@
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 	<!--<build>-->
