--- a/database-springboot-mybatis/pom.xml
+++ b/database-springboot-mybatis/pom.xml
@@ -22,6 +22,12 @@
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- mysql -->
 		<dependency>
