--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,9 @@
 		<druid.version>1.0.21</druid.version>
 		<mysql.version>5.1.38</mysql.version>
 		<spring-boot-mybatis.version>1.3.2</spring-boot-mybatis.version>
-		<spring.version>4.3.10.RELEASE</spring.version>
+		<spring.version>4.3.18.RELEASE</spring.version>
 		<aspectjweaver.version>1.9.3</aspectjweaver.version>
-		<spring-boot.version>1.5.5.RELEASE</spring-boot.version>
+		<spring-boot.version>1.5.21.RELEASE</spring-boot.version>
 		<dubbo.version>2.7.0</dubbo.version>
 		<curator-framework.version>2.12.0</curator-framework.version>
 		<fastjson.version>1.2.31</fastjson.version>
@@ -440,7 +440,7 @@
 
 	<distributionManagement>
 		<repository>
-			<id>keke</id>
+			<id>sic777</id>
 			<url>scp://47.75.88.33/data/maven_resp</url>
 		</repository>
 	</distributionManagement>
